--- a/templates/photo/index.html.twig
+++ b/templates/photo/index.html.twig
@@ -34,7 +34,7 @@
     </div> 
          <div class="select"> {{ form_start(form) }}
         {{ form_row(form.photo) }}</div>
-      <div> <button class="btn btn1">Telechage ta photo</button>
+      <div> <button class="btn btn1">Telerchage ta photo</button>
        {{ form_end(form) }}</div>
 </div>
      {% endblock %}
